初始化了index.html的内容

--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <style>
+            body {
+                background-color: skyblue;
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
-        博客搭建
+        个人博客搭建
     </body>
 </html>
